@@ -85,43 +85,66 @@ h6  = uimenu(h0,...
 	'Separator',	'off',...
 	'Tag',		'Extended tools',...
 	'HandleVisibility','on');
-h54  = uimenu(h6,...
+h61  = uimenu(h6,...
 	'Label',	'Spatial adaptive non local means denoising filter',...
 	'Separator',	'off',...
 	'Tag',		'SANLM filter',...
 	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.tools.sanlm'');',...
 	'HandleVisibility','on');
-h55  = uimenu(h6,...
+h62  = uimenu(h6,...
 	'Label',	'Intra-subject bias correction',...
 	'Separator',	'off',...
 	'Tag',		'Intra-subject bias correction',...
 	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.tools.bias'');',...
 	'HandleVisibility','on');
-h56  = uimenu(h6,...
+h63  = uimenu(h6,...
 	'Label',	'Apply deformations (Many images)',...
 	'Separator',	'off',...
 	'Tag',		'Apply deformations (Many images)',...
 	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.tools.defs'');',...
 	'HandleVisibility','on');
-h57  = uimenu(h6,...
+h64  = uimenu(h6,...
 	'Label',	'Apply deformations (Many subjects)',...
 	'Separator',	'off',...
 	'Tag',		'Apply deformations (Many subjects)',...
 	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.tools.defs2'');',...
 	'HandleVisibility','on');
-h58  = uimenu(h6,...
+h65  = uimenu(h6,...
 	'Label',	'Set origin using center-of-mass',...
 	'Separator',	'off',...
 	'Tag',		'Set origin using center-of-mass',...
 	'CallBack','cg_set_com;',...
 	'HandleVisibility','on');
 h7  = uimenu(h0,...
+	'Label',	'Surface tools',...
+	'Separator',	'off',...
+	'Tag',		'Surface tools',...
+	'HandleVisibility','on');
+h71  = uimenu(h7,...
+	'Label',	'Display surface',...
+	'Separator',	'off',...
+	'Tag',		'Display surface',...
+	'CallBack','spm_mesh_render(spm_select(1,''gifti'',''Select surface''));',...
+	'HandleVisibility','on');
+h72  = uimenu(h7,...
+	'Label',	'Extract surface parameters',...
+	'Separator',	'off',...
+	'Tag',		'Extract surface parameters',...
+	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.tools.surfextract'');',...
+	'HandleVisibility','on');
+h73  = uimenu(h7,...
+	'Label',	'Resample and smooth surface parameters',...
+	'Separator',	'off',...
+	'Tag',		'Resample surface parameters to template space',...
+	'CallBack','spm_jobman(''interactive'','''',''spm.tools.vbm.tools.surfresamp'');',...
+	'HandleVisibility','on');
+h8  = uimenu(h0,...
 	'Label',	'Print VBM debug information',...
 	'Separator',	'on',...
 	'Tag',		'Print debug information about versions and last error',...
 	'CallBack','cg_vbm_debug;',...
 	'HandleVisibility','on');
-h8  = uimenu(h0,...
+h9  = uimenu(h0,...
 	'Label',	'VBM Tools website',...
 	'Separator',	'off',...
 	'Tag',		'Launch VBM Tools site',...
@@ -129,13 +152,13 @@ h8  = uimenu(h0,...
 			'web(''http://dbm.neuro.uni-jena.de/vbm'',''-browser'');',...
 			'set(gcbf,''Pointer'',''Arrow'')'],...
 	'HandleVisibility','on');
-h9  = uimenu(h0,...
+h10  = uimenu(h0,...
 	'Label',	'Check for updates',...
 	'Separator',	'off',...
 	'Tag',		'Check for updates',...
 	'CallBack','cg_vbm_update(1);',...
 	'HandleVisibility','on');
-h10  = uimenu(h0,...
+h11  = uimenu(h0,...
 	'Label',	'VBM12 Manual (PDF)',...
 	'Separator',	'off',...
 	'Tag',		'Open VBM12 Manual',...
